--- a/myshopifywebsite/src/homepage/components/best.sellers/index.scss
+++ b/myshopifywebsite/src/homepage/components/best.sellers/index.scss
@@ -52,4 +52,7 @@ h1{
         max-width: 1200px;
         margin: 0 auto;
         padding: 4% 0;
+        .rating{
+            display: flex;
+        }
     }
