--- a/myshopifywebsite/src/layouts/header/index.scss
+++ b/myshopifywebsite/src/layouts/header/index.scss
@@ -5,7 +5,7 @@ nav{
     .header{
         // margin: 0 auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         padding:30px 0;
         background-color: #e1e1e1;
         height: 100%;
