--- a/myshopifywebsite/src/layouts/header/index.scss
+++ b/myshopifywebsite/src/layouts/header/index.scss
@@ -12,10 +12,10 @@ nav{
         // position: fixed;
         // z-index: 2;
         .logo_header{
-           img{
-            width: 153px;
-            height: 44px;
-           }
+            img{
+                width: 153px;
+                height: 44px;
+               }
         }
         .header_input{
             width: 538.41px;
@@ -68,22 +68,26 @@ nav{
                     }
                 }
             }
-            .shopping_cart{
-                display: flex;
-                &:hover{
-                    color: #2266cc;
-                    cursor: pointer;
-                }
-                .cart_text{
-                    padding: 10px 0;
-                    p{
-                        font-size: 13px;
+            a{
+                text-decoration: none;
+                color: black;
+                .shopping_cart{
+                    display: flex;
+                    &:hover{
+                        color: #2266cc;
+                        cursor: pointer;
                     }
-                }
-                div{
-                    i{
-                        font-size: 28px;
-                        padding: 15px 10px;
+                    .cart_text{
+                        padding: 10px 0;
+                        p{
+                            font-size: 13px;
+                        }
+                    }
+                    div{
+                        i{
+                            font-size: 28px;
+                            padding: 15px 10px;
+                        }
                     }
                 }
             }
