--- a/myshopifywebsite/src/homepage/components/best.sellers/index.scss
+++ b/myshopifywebsite/src/homepage/components/best.sellers/index.scss
@@ -1,52 +1,6 @@
-// #app { height: 100% }
-// html,
-// body {
-//   position: relative;
-//   height: 100%;
-// }
-
-// body {
-//   background: #eee;
-//   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-//   font-size: 14px;
-//   color: #000;
-//   margin: 0;
-//   padding: 0;
-// }
-
-// .swiper {
-//   width: 100%;
-//   height: 100%;
-// }
-
-// .swiper-slide {
-//   text-align: center;
-//   font-size: 18px;
-//   background: #fff;
-
-
-//   display: -webkit-box;
-//   display: -ms-flexbox;
-//   display: -webkit-flex;
-//   display: flex;
-//   -webkit-box-pack: center;
-//   -ms-flex-pack: center;
-//   -webkit-justify-content: center;
-//   justify-content: center;
-//   -webkit-box-align: center;
-//   -ms-flex-align: center;
-//   -webkit-align-items: center;
-//   align-items: center;
-// }
-
-// .swiper-slide img {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
 h1{
     text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
  .seller{
         max-width: 1200px;
@@ -54,5 +8,63 @@ h1{
         padding: 4% 0;
         .rating{
             display: flex;
+            margin-left: 10px;
+            i{
+                margin-left: 10px;
+            }
         }
+      .sellers{
+        display:  inline-block;
+        position: relative;
+        &:hover{
+            .img-top{
+                display: inline;
+                width: 200px;
+                height: 230px;
+                transition: all 0.9s;
+                // transition-timing-function: ease;
+            }
+        }
+        .img-top{
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            z-index: 99;
+            &:hover{
+                opacity: 1;
+                transition-duration: 1s;
+            }
+        }
+        .seller-div{
+            padding: 5px 0;
+            p{
+                color: #222222;
+                font-size: 13px;
+                opacity: 0.6;
+            }
+            h3{
+                color: #666666;
+                font-size: 15px;
+            }
+            strong{
+                color: #d26e4b;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+        button{
+            width: 200px;
+            height: 40px;
+            background-color: #3883f5;
+            color: #eee;
+            border: none;
+            border-radius: 3px;
+            font-size: 15px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+      }
     }
