--- a/myshopifywebsite/src/homepage/components/section.background/index.scss
+++ b/myshopifywebsite/src/homepage/components/section.background/index.scss
@@ -7,8 +7,24 @@
    
     .background_section_text{
         position: absolute;
-        top: 40%;
-        left: 40%;
+        top: 20%;
+        left: 25%;
+        .extra{
+            color: #eee;
+            font-size: 50px;
+            font-family: 'Caveat', cursive;
+            text-align: center;
+        }
+        .summer{
+            color: #eee;
+            font-size: 60px;
+            font-weight: bolder;
+        }
+        .free{
+            color: #eee;
+            text-align: center;
+            font-size: 20px;
+        }
         button{
             width: 150px;
             height: 45px;
@@ -18,7 +34,7 @@
             background-color: #0d6efd;
             color: white;
             font-weight: bold;
-            margin-left: 20%;
+            margin-left: 40%;
             margin-top: 5%;
             &:hover{
                 opacity: 0.8;
