--- a/myshopifywebsite/src/pages/basket/index.scss
+++ b/myshopifywebsite/src/pages/basket/index.scss
@@ -1,9 +1,66 @@
-.main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img{
-        width: 300px;
-        height: 300px;
+.container {
+    .basket {
+      box-sizing: border-box;
+      max-width: 1200px;
+      margin: 55px auto;
+      display: flex;
+      column-gap: 10px;
+      .basket-items {
+        background-color: #fff;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+        width: 100%;
+        padding: 0 20px;
+        .my-cart {
+          border-top: 1px solid rgba(0, 0, 0, 0.2);
+          border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+          margin: 20px 20px;
+          padding: 4px 0;
+          font-size: 18px;
+        }
+        .main-info {
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          padding: 15px 7px;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+          .img {
+            width: 15%;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            margin-left: 20px;
+            margin-top: 10px;
+            img {
+              width: 90%;
+            }
+          }
+          .info {
+            width: 80%;
+            margin-left: 15px;
+            line-height: 22px;
+          }
+          .removeBtn {
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid red;
+            color: red;
+            cursor: pointer;
+            margin-left: 20px;
+          }
+          .price-per-unit {
+            color: #ccc10b;
+          }
+        }
+        .link {
+          padding: 15px 0;
+          // border-top: 1px solid rgba(0, 0, 0, 0.3);
+          border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+          margin-left: 15px;
+          margin-bottom: 50px;
+  
+          a {
+            font-size: 15px;
+            color: rgba(0, 0, 0, 0.703);
+          }
+        }
+      }
     }
-}
+  }
