--- a/myshopifywebsite/src/homepage/components/dropdown/index.scss
+++ b/myshopifywebsite/src/homepage/components/dropdown/index.scss
@@ -1,3 +1,21 @@
+.dropDown{
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: space-between;
+    height: 40px;
+    padding-top: 10px;
+   a{
+    text-decoration: none;
+    color: black;
+   }
+    .text{
+        span{
+            padding: 0 10px;
+            margin: 0 5px;
+        }
+    }
+}
 .categories{
         display: flex;
     }
